--- a/nural_barrier.ipynb
+++ b/nural_barrier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,15 +17,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([1315.1403,  848.7537,  138.6547,   10.0000])\n",
-      "tensor([1307.2716,  842.5824,  141.8936,   10.0000])\n",
+      "tensor([ 397.6137,  852.4254, -122.5904,   10.0000])\n",
+      "tensor([ 393.7723,  861.6581, -112.5905,   10.0000])\n",
       "19999\n"
      ]
     }
@@ -46,14 +46,14 @@
     "states_unsafe = unsafe_data\n",
     "next_states_safe = states_safe[1:]  # All but the first state\n",
     "states_safe = states_safe[:-1]  # All but the last state\n",
-    "print(states_safe[5])\n",
-    "print(next_states_safe[5])\n",
+    "print(states_safe[0])\n",
+    "print(next_states_safe[0])\n",
     "print(len(states_safe))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
     "\n",
     "    def forward(self, x):\n",
     "        hidden = self.tanh(self.fc1(x))\n",
-    "        return self.fc2(hidden)  # Now matches the passage's full equation"
+    "        return self.fc2(hidden)"
    ]
   },
   {
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
     "\n",
     "# Check if a checkpoint exists and load it\n",
     "checkpoint_path = 'checkpoint9.pth'\n",
-    "start_epoch = 0  # default start epoch if no checkpoint is found\n",
+    "start_epoch = 1  # default start epoch if no checkpoint is found\n",
     "if os.path.exists(checkpoint_path):\n",
     "    checkpoint = torch.load(checkpoint_path)\n",
     "    barrier_net.load_state_dict(checkpoint['model_state_dict'])\n",
@@ -333,11 +333,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_lie_derivative(barrier_net, state, dynamics_model, delta_t=0.1, control_input=None):\n",
+    "def compute_lie_derivative(barrier_net, state, dynamics_model, control_input=None):\n",
     "    if control_input is None:\n",
     "        control_input = np.array([0.0, 0.0])  # Default control input: [acceleration, steering] = [1, 0]\n",
     "    \n",
@@ -353,7 +353,6 @@
     "    B_x.backward()\n",
     "    grad_B_x = state_tensor.grad  # ∇B(x)\n",
     "\n",
-    "    # Compute dynamics f(x) - ensure it operates in the same tensor format\n",
     "    f_x = torch.tensor(dynamics_model(state_tensor, control_input), dtype=torch.float32)\n",
     "\n",
     "    # Compute Lie derivative Lf B(x) = ∇B(x) ⋅ f(x)\n",
@@ -562,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +899,6 @@
     "\n",
     "    # Condition 3: Verify Lie derivative for boundary states\n",
     "    grid_states = create_grid_around_boundary(states_safe, threshold=0.1, delta=0.05)\n",
-    "    #grid_states, _ = create_grid_around_boundary2(barrier_net, states_safe, dynamics_model, threshold=0.1, delta=0.05)\n",
     "\n",
     "    violating_states = verify_lie_derivative(barrier_net, grid_states, dynamics_model)\n",
     "    violating_states_np = np.array([state.detach().numpy() for state in violating_states])\n",
@@ -939,25 +937,6 @@
     "    # Print out the labels for violating states\n",
     "    # for i, state in enumerate(violating_states):\n",
     "    #     print(f\"State {state}: Label {violating_labels[i]}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Safe violating states: 54440\n",
-      "Unsafe violating states: 30\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f\"Safe violating states: {safe_violating_states.shape[0]}\")\n",
-    "print(f\"Unsafe violating states: {unsafe_violating_states.shape[0]}\")"
    ]
   }
  ],
